# LibCarna-Python

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml  install_carna_dev.bash  install_libcarna_dev.bash  linux_build.bash  setup.py  setup.py.in
.github/workflows/: build.yml  build_all.yml
docs/: carna.base.math.rst  carna.base.rst  carna.egl.rst  carna.helpers.rst  carna.presets.rst  carna.rst  conf.py  index.rst  libcarna.base.math.rst  libcarna.base.rst  libcarna.data.rst  libcarna.egl.rst  libcarna.helpers.rst  libcarna.presets.rst  libcarna.rst  requirements.txt
docs/_static/: custom.css
examples/: cells.ipynb  cthead.ipynb  introduction.ipynb  kalinin2018.ipynb
misc/: __init__.py.in  distribute_to_pypi.sh  py.py  versions.yml
misc/libcarna/: _alias.py  _animation.py  _axes.py  _color.py  _color_map_helper.py  _colorbar.py  _colormap_helper.py  _cutting_planes.py  _drr.py  _dvr.py  _huv.py  _imshow.py  _mask_renderer.py  _material.py  _mip.py  _opaque.py  _opaque_renderer.py  _py.py  _render_stage_tools.py  _renderer.py  _spatial.py  _transform.py  _typing.py  data.py
misc/libcarna/libs/skvideo/: __init__.py
misc/libcarna/libs/skvideo/io/: __init__.py  abstract.py  ffmpeg.py  io.py
misc/libcarna/libs/skvideo/utils/: __init__.py
src/egl/: EGLContext.cpp
src/include/Carna/egl/: EGLContext.h
src/include/Carna/py/: Log.h  Surface.h  base.h  egl.h  helpers.h  presets.h
src/include/LibCarna/egl/: EGLContext.hpp
src/include/LibCarna/py/: Surface.hpp  base.hpp  egl.hpp  helpers.hpp  log.hpp  presets.hpp
src/py/: Log.cpp  Surface.cpp  base.cpp  egl.cpp  helpers.cpp  log.cpp  presets.cpp
test/: CMakeLists.txt  requirements.txt  test_base.py  test_cutting_planes.py  test_data.py  test_drr.py  test_dvr.py  test_egl.py  test_helpers.py  test_integration.py  test_mask_renderer.py  test_material.py  test_mip.py  test_opaque.py  test_opaque_renderer.py  test_presets.py  test_py.py  test_spatial.py  testsuite.py
test/results/: README.md
